# GridKit

./: CMakeLists.txt  CircuitGraph.hpp  ModelEvaluator.hpp  ModelEvaluatorImpl.hpp  PowerElectronicsModel.hpp  PowerSystemData.hpp  SystemModel.hpp  SystemSteadyStateModel.hpp
CMake/: FindSuiteSparse.cmake
ComponentLib/PowerElectronicsComponents/: CMakeLists.txt  CircuitComponent.hpp
ComponentLib/PowerElectronicsComponents/Capacitor/: CMakeLists.txt  Capacitor.cpp  Capacitor.hpp
ComponentLib/PowerElectronicsComponents/DiscreteGenerator/: CMakeLists.txt  DiscreteGenerator.cpp  DiscreteGenerator.hpp
ComponentLib/PowerElectronicsComponents/DistributedGenerator/: CMakeLists.txt  DistributedGenerator.cpp  DistributedGenerator.hpp
ComponentLib/PowerElectronicsComponents/InductionMotor/: CMakeLists.txt  InductionMotor.cpp  InductionMotor.hpp
ComponentLib/PowerElectronicsComponents/Inductor/: CMakeLists.txt  Inductor.cpp  Inductor.hpp
ComponentLib/PowerElectronicsComponents/LinearTransformer/: CMakeLists.txt  LinearTransformer.cpp  LinearTransformer.hpp
ComponentLib/PowerElectronicsComponents/MicrogridBusDQ/: CMakeLists.txt  MicrogridBusDQ.cpp  MicrogridBusDQ.hpp
ComponentLib/PowerElectronicsComponents/MicrogridLine/: CMakeLists.txt  MicrogridLine.cpp  MicrogridLine.hpp
ComponentLib/PowerElectronicsComponents/MicrogridLoad/: CMakeLists.txt  MicrogridLoad.cpp  MicrogridLoad.hpp
ComponentLib/PowerElectronicsComponents/Resistor/: CMakeLists.txt  Resistor.cpp  Resistor.hpp
ComponentLib/PowerElectronicsComponents/SynchronousMachine/: CMakeLists.txt  SynchronousMachine.cpp  SynchronousMachine.hpp
ComponentLib/PowerElectronicsComponents/TransmissionLine/: CMakeLists.txt  TransmissionLine.cpp  TransmissionLine.hpp
ComponentLib/PowerElectronicsComponents/VoltageSource/: CMakeLists.txt  VoltageSource.cpp  VoltageSource.hpp
Examples/DiscreteGeneratorTest/: CMakeLists.txt  DGTest.cpp
Examples/Microgrid/: CMakeLists.txt  Microgrid.cpp
Examples/RLCircuit/: CMakeLists.txt  RLCircuit.cpp
Examples/Scale_Microgrid/: CMakeLists.txt  Scale_Microgrid.cpp  microgrid_N2.txt  microgrid_N4.txt  microgrid_N8.txt
Utilities/: FileIO.hpp  (+2 more)
(+29 files in other folders)
